# chubaodb

./: .gitignore  Cargo.toml  MAINTAINERs.md  README.md  build.rs  index.html
.github/ISSUE_TEMPLATE/workflows/: book.yml
.github/workflows/: book.yml  release.yml
config/: config.toml
docker/: docker-compose.yml  run_docker.bat  run_docker.sh
docker/base/: Dockerfile
docs/: compile.md  index.html
docs/zh-CN/: book.toml
docs/zh-CN/src/: SUMMARY.md  aggregation.md  architecture.md  cluster.md  collection.md  config.md  crud.md  install.md  introduction.md  master.md  search.md  vector.md
proto/: pserverpb.proto
proto/src/: pserverpb.rs
protocol/: Cargo.toml  build.rs  pserverpb.proto
protocol/proto/: meta.proto  meta_raft.proto  pserver.proto  raft.proto
protocol/src/: RADME.md  lib.rs  meta.rs  meta_raft.rs  pserver.rs  pserverpb.rs  raft.rs
src/: lib.rs  main.rs
src/client/: meta_client.rs  mod.rs  partition_client.rs  ps_client.rs
src/master/: graphql.rs  mod.rs  raft.rs  server.rs  service.rs
src/master/meta/: db.rs  mod.rs  raft.rs  repository.rs  rocksdb.rs
src/meta/: graphql.rs  meta_raft_service.rs  mod.rs  server.rs  service.rs  storage.rs
src/meta/graphql/: api.rs
src/meta/store/: db.rs  mod.rs
src/pserver/: mod.rs  server.rs  service.rs
src/pserver/raft/: mod.rs  raft.rs  state_machine.rs
src/pserver/raft_bak/: mod.rs  raft.rs  state_machine.rs
src/pserver/simba/: latch.rs  mod.rs  simba.rs
src/pserver/simba/aggregation/: function.rs  group.rs  mod.rs
src/pserver/simba/engine/: engine.rs  faiss.rs  faiss_empty.rs  mod.rs  raft.rs  rocksdb.rs  tantivy.rs
src/pserver/simba/engine/tantivy/: aggregation_collector.rs  bitmap_collector.rs  mod.rs  sort.rs
src/router/: mod.rs  server.rs  service.rs
src/util/: coding.rs  config.rs  convert.rs  entity.rs  error.rs  http_client.rs  mod.rs  net.rs  time.rs
src/util/raft/: key.rs  mod.rs  network.rs  storage.rs
src/util/storage/: key.rs  mod.rs
test/: agg_test.py  config.py  doc2unix.py  example.py  sort_test.py  test_diff_dir.py  test_insert.py  test_transfer.py  vector_test.py  writer_test.py
zh-CN/: 404.html  aggregation.html  architecture.html  cluster.html  collection.html  config.html  crud.html  design.html  document.html  index.html  install.html  introduction.html  master.html  plan.html  print.html  search.html  searchindex.js  searchindex.json  vector.html
