[package]
name = "chubaodb"
version = "0.1.0"
description = "A distributed document database on top of ChubaoFS"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"
authors = ["The Chubao Authors"]

[[bin]]
name = "chubaodb"
path = "src/main.rs"
doc = false

[dependencies]
alaya-protocol = { path = "protocol"}
xraft = { path = "raft"}
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
tracing-futures = "0.2.4"
tracing-opentelemetry = "0.14.0"
anyhow = "1.0.40"
log4rs = "1.0.0"
clap = "2.33.3"
chrono = "0.4.15"
backtrace = "0.3"
toml = "0.5.6"
actix-web = "3.3.2"
async-trait = "0.1.40"
async-graphql = "2.9.3"
async-graphql-actix-web = "2.9.3"
http = "0.2.1"
tonic = { version = "0.5.0", features = ["tls"] }
tokio = { version = "1.5.0", features = ["full"] }
prost = "0.8.0"
serde = { version = "1.0.115" }
serde_derive = "1.0.115"
serde_json = "1.0.57"
base64 = "0.13.0"
reqwest = { version = "0.11.3", features = ["json", "blocking"],default-features=false }
git-version = "0.3.4"
uuid = { version = "0.8", features = ["v4"] }
itertools = "0.10.0"
rocksdb = { version = "0.16.0", features = ["lz4"] }
tantivy = "0.15.3"
rand = "0.8.3"
roaring = "0.7.0"
num_enum = "0.5.1"
faiss4rs = {version = "1.6.307" , optional = true}
smallvec = { version = "1.4.2", features = ["serde", "write"] }
byteorder = "1.3.4"
bincode = "1.3.1"


[features]
default = []
vector = ["faiss4rs"]