[package]
name = "alaya-protocol"
version = "0.1.0"
authors = ["Ansj <ansj-sun@163.com>"]
edition = "2018"

[dependencies]
tonic = { version = "0.4.2" }
serde = { version = "1.0", features = ["derive"] }
prost = "0.7"
serde_derive = "1.0.115"

[build-dependencies]
tonic-build = { version = "0.4.2" }
